--- a/index.html
+++ b/index.html
@@ -6,40 +6,47 @@
     <link rel="stylesheet" href="style.css"MEDIA="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered-main-page-element">
-      <p id="top-Section-For-Adding-Element-To-List">
+    <header class="aaa">
+      <figure>
+        <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+        <figcaption>
+          <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+        </figcaption>
+      </figure>
+    </header>
+    <main class="centered-main-page-element">
+      <section id="top-Section-For-Adding-Element-To-List">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove-img">
-          </button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove-img">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
+      </section>
+      <section>
+        <h2>Todo</h2>
+        <ul id="incomplete-tasks">
+          <li>
+            <input type="checkbox">
+            <label class="task">Pay Bills</label>
+            <input type="text" class="task">
+            <button class="edit">Edit</button>
+            <button class="delete">
+              <img src="./remove.svg" alt="remove-img">
+            </button>
+          </li>
+          <li class="editMode">
+            <input type="checkbox">
+            <label class="task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task">
+            <button class="edit">Save</button>
+            <button class="delete">
+              <img src="./remove.svg" alt="remove-img">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Completed</h2>
         <ul id="completed-tasks">
           <li>
           <input type="checkbox" checked>
@@ -51,7 +58,8 @@
           </button>
           </li>
         </ul>
-    </div>
+      </section>
+    </main>
     <script SRC="app.js"></script>
   </body>
 </html>
