--- a/index.html
+++ b/index.html
@@ -2,64 +2,83 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"MEDIA="screen" charset="utf-8">
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
   </head>
-  <body>
-    <header class="aaa">
-      <figure>
-        <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-        <figcaption>
-          <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-        </figcaption>
-      </figure>
+  <body class="body">
+    <header class="header">
+      <img
+        class="header__img"
+        src="./eisenhower-matrix.jpg"
+        alt="eisenhower-matrix"
+      />
+      <a
+        class="header__link"
+        href="https://goal-life.com/page/method/matrix-eisenhower"
+        >Want more details?</a
+      >
     </header>
-    <main class="centered-main-page-element">
-      <section id="top-Section-For-Adding-Element-To-List">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+    <main class="main">
+      <section class="section section__add">
+        <h2 class="section__title section__add_title">Add Item</h2>
+        <div class="section__wrapper">
+          <input class="task section__task" id="new-task" type="text" />
+          <button class="btn section__btn section__btn_add">Add</button>
         </div>
       </section>
-      <section>
-        <h2>Todo</h2>
-        <ul id="incomplete-tasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="remove-img">
+      <section class="section section__todo">
+        <h2 class="title section__title">Todo</h2>
+        <ul class="list section_list" id="uncompleted">
+          <li class="item section__item">
+            <input class="checkbox section__checkbox" type="checkbox" />
+            <label class="label section__label">Pay Bills</label>
+            <input class="task section__task" type="text" />
+            <button class="btn section__btn section__btn_edit">Edit</button>
+            <button class="btn section__btn section__btn_del">
+              <img
+                class="img section__img"
+                src="./remove.svg"
+                alt="remove-img"
+              />
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="remove-img">
+          <li class="item section__item section__item_edit">
+            <input class="checkbox section__checkbox" type="checkbox" />
+            <label class="label section__label">Go Shopping</label>
+            <input class="task section__task" type="text" value="Go Shopping" />
+            <button class="btn section__btn section__btn_edit">Save</button>
+            <button class="btn section__btn section__btn_del">
+              <img
+                class="img section__img"
+                src="./remove.svg"
+                alt="remove-img"
+              />
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Completed</h2>
-        <ul id="completed-tasks">
-          <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove-img">
-          </button>
+      <section class="section section__completed">
+        <h2 class="title section__title">Completed</h2>
+        <ul class="list section_list" id="completed">
+          <li class="item section__item">
+            <input class="checkbox section__checkbox" type="checkbox" checked />
+            <label class="label section__label">See the Doctor</label>
+            <input class="task section__task" type="text" />
+            <button class="btn section__btn section__btn_edit">Edit</button>
+            <button class="btn section__btn section__btn_del">
+              <img
+                class="img section__img"
+                src="./remove.svg"
+                alt="remove-img"
+              />
+            </button>
           </li>
         </ul>
       </section>
     </main>
-    <script SRC="app.js"></script>
-  </body>
+    <script src="app.js"></script>
+  </.body>
 </html>
