fix: style add item title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main class="main">
       <section class="section section__add">
-        <h2 class="section__title section__add_title">Add Item</h2>
+        <h2 class="title section__title section__add_title">Add Item</h2>
         <div class="section__wrapper">
           <input class="task section__task" id="new-task" type="text" />
           <button class="btn section__btn section__btn_add">Add</button>
@@ -80,5 +80,5 @@
       </section>
     </main>
     <script src="app.js"></script>
-  </.body>
+  </body>
 </html>
